[fix]hero top spacing on mobile buttons work, and text adjustments on calculator

--- a/css/hero.css
+++ b/css/hero.css
@@ -95,11 +95,13 @@ h6 {
     background-size: cover;
     height: auto;
     color: white;
-    padding: 10rem 0 6rem 0;
-    margin-top: -60px;
+    padding: 15px 0 6rem 0;
   }
   .review-card {
     width: 360px;
+  }
+  #hero button {
+    margin-top: 10px;
   }
 }
 @media only screen and (min-width: 661px) {
