--- a/css/why-us.css
+++ b/css/why-us.css
@@ -5,7 +5,7 @@
 }
 #why-us {
   overflow-x: hidden;
-  margin: 0 3rem;
+  margin: 0 20px;
 }
 #why-us h4 {
   color: rgb(85, 85, 85);
